deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: welcome-php
  name: welcome-php
  namespace: bgd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: welcome-php
  strategy: {}
  template:
    metadata:
      labels:
        app: welcome-php
    spec:
      containers:
      - image: quay.io/redhatworkshops/welcome-php:latest
        name: welcome-php
        resources: {}
